[package]
name = "tx_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
chrono = "0.4.22"
tokio = { version = "1.21.2", features = ["full"] }
rand = "0.8"
rust_decimal = "1.26"
rust_decimal_macros = "1.26"